--- a/day33_pra02.html
+++ b/day33_pra02.html
@@ -7,10 +7,12 @@
 		<style type="text/css">
 		* { background: pink}
 		.main{
-		background: red; width: 300px; height:500px; 
-		display: table-cell; display: inline-block; 
-		line-height: 130px; 
-		vertical-align: middle; text-align: center;
+		background: red; width: 300px; height:500px; /* 백그라운드 설정 및 박스 크기 설정*/
+		display: table-cell; /*table-cell : <td> 요소처럼 표현한다*/
+		display: inline-block;  /* 전후 줄바꿈 없이 한 줄에 다른 엘리먼트들과 나란히 배치된다*/
+		line-height: 130px; /*line-height는 줄 높이를 정하는 속성*/ 
+		vertical-align: middle; /*인라인요소의 수직 정렬을 위해 사용*/
+		text-align: center;
 		color: white;}
 		.con{background: red; 
 			 font-size: 30px; font-family: serif; font-weight: bold;}
